--- a/src/main/resources/login_layout.fxml
+++ b/src/main/resources/login_layout.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?scenebuilder-stylesheet stylesheet.css?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane id="" prefHeight="480.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mcspaskiy.App">
+<BorderPane id="" prefHeight="480.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mcspaskiy.RegistrationController">
   <center>
     <GridPane>
       <children>
-        <Label text="Label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <Label text="Label" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label alignment="CENTER_RIGHT" text="Login" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Button mnemonicParsing="false" onAction="#handleButtonAction" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Password" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="tfLogin" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="tfPassword" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label fx:id="lblResult" disable="false" text="Label" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="2" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -27,4 +27,7 @@
       </rowConstraints>
     </GridPane>
   </center>
+  <top>
+    <Label alignment="CENTER" contentDisplay="LEFT" text="Login Form" textAlignment="LEFT" underline="false" />
+  </top>
 </BorderPane>
