--- a/src/main/resources/login_layout.fxml
+++ b/src/main/resources/login_layout.fxml
@@ -1,33 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?scenebuilder-stylesheet stylesheet.css?>
-<?import java.lang.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane id="" prefHeight="480.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mcspaskiy.RegistrationController">
-  <center>
-    <GridPane>
-      <children>
-        <Label alignment="CENTER_RIGHT" text="Login" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Button mnemonicParsing="false" onAction="#handleButtonAction" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <Label text="Password" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="tfLogin" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <TextField fx:id="tfPassword" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <Label fx:id="lblResult" disable="false" text="Label" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-      </children>
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      </columnConstraints>
-      <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-    </GridPane>
-  </center>
-  <top>
-    <Label alignment="CENTER" contentDisplay="LEFT" text="Login Form" textAlignment="LEFT" underline="false" />
-  </top>
+<?import javafx.scene.text.Font?>
+<BorderPane id="" prefHeight="200.0" prefWidth="380.0" stylesheets="stylesheet.css" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mcspaskiy.RegistrationController">
+    <center>
+        <GridPane>
+            <children>
+                <Label alignment="CENTER_RIGHT" text="Login" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
+                       GridPane.rowIndex="0">
+                    <GridPane.margin>
+                        <Insets right="8.0" fx:id="x2"/>
+                    </GridPane.margin>
+                </Label>
+                <Button mnemonicParsing="false" onAction="#handleButtonAction" text="Login" GridPane.columnIndex="1"
+                        GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                    <GridPane.margin>
+                        <Insets right="8.0" fx:id="x2"/>
+                    </GridPane.margin>
+                </Button>
+                <Label text="Password" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.margin="$x2"
+                       GridPane.rowIndex="1"/>
+                <TextField fx:id="tfLogin" prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x2"
+                           GridPane.rowIndex="0"/>
+                <TextField fx:id="tfPassword" prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x2"
+                           GridPane.rowIndex="1"/>
+                <Label fx:id="lblResult" disable="false" text="" visible="false" GridPane.columnIndex="0"
+                       GridPane.rowIndex="2">
+                    <GridPane.margin>
+                        <Insets left="8.0"/>
+                    </GridPane.margin>
+                </Label>
+            </children>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+        </GridPane>
+    </center>
+    <top>
+        <Label text="Login Form" textAlignment="LEFT" underline="false" BorderPane.alignment="TOP_CENTER">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
+        </Label>
+    </top>
 </BorderPane>
