--- a/src/main/resources/login_layout.fxml
+++ b/src/main/resources/login_layout.fxml
@@ -1,64 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane id="" prefHeight="200.0" prefWidth="380.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mcspaskiy.controller.LoginController">
-  <bottom>
-    <HBox prefHeight="24.0" prefWidth="20048.0">
-      <children>
-        <Label text="IP-address:">
-          <HBox.margin>
-            <Insets left="8.0" fx:id="x1" />
-          </HBox.margin>
+<BorderPane id="" prefHeight="200.0" prefWidth="380.0" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mcspaskiy.controller.LoginController">
+    <center>
+        <GridPane prefHeight="178.0" prefWidth="341.0">
+            <children>
+                <Label alignment="CENTER_RIGHT" text="Nickname:" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
+                       GridPane.rowIndex="0">
+                    <GridPane.margin>
+                        <Insets right="8.0" fx:id="x2"/>
+                    </GridPane.margin>
+                </Label>
+                <Button mnemonicParsing="false" onAction="#handleButtonAction" text="Connect to server"
+                        GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                    <GridPane.margin>
+                        <Insets right="8.0" fx:id="x2"/>
+                    </GridPane.margin>
+                </Button>
+                <Label text="Server IP:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.margin="$x2"
+                       GridPane.rowIndex="1"/>
+                <TextField fx:id="tfName" prefWidth="200.0" text="Spaskiy" GridPane.columnIndex="1"
+                           GridPane.margin="$x2" GridPane.rowIndex="0"/>
+                <TextField fx:id="tfIp" prefWidth="200.0" text="192.168.36.1" GridPane.columnIndex="1"
+                           GridPane.margin="$x2" GridPane.rowIndex="1"/>
+            </children>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+        </GridPane>
+    </center>
+    <top>
+        <Label text="Find or create new game" textAlignment="LEFT" underline="false" BorderPane.alignment="TOP_CENTER">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
         </Label>
-        <Label fx:id="lblIp" text="..." HBox.margin="$x1" />
-      </children>
-    </HBox>
-  </bottom>
-  <center>
-    <GridPane prefHeight="178.0" prefWidth="341.0">
-      <children>
-        <Label alignment="CENTER_RIGHT" text="Nickname:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
-          <GridPane.margin>
-            <Insets right="8.0" fx:id="x2" />
-          </GridPane.margin>
-        </Label>
-        <Button mnemonicParsing="false" onAction="#handleButtonAction" text="Connect to server" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-          <GridPane.margin>
-            <Insets right="8.0" fx:id="x2" />
-          </GridPane.margin>
-        </Button>
-        <Label text="Server IP:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.margin="$x2" GridPane.rowIndex="1" />
-        <TextField fx:id="tfName" prefWidth="200.0" text="Spaskiy" GridPane.columnIndex="1" GridPane.margin="$x2" GridPane.rowIndex="0" />
-        <TextField fx:id="tfIp" prefWidth="200.0" text="192.168.36.1" GridPane.columnIndex="1" GridPane.margin="$x2" GridPane.rowIndex="1" />
-        <Label fx:id="lblResult" disable="false" text="" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="2">
-          <GridPane.margin>
-            <Insets left="8.0" fx:id="x1" />
-          </GridPane.margin>
-        </Label>
-      </children>
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      </columnConstraints>
-      <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-    </GridPane>
-  </center>
-  <top>
-    <Label text="Find or create new game" textAlignment="LEFT" underline="false" BorderPane.alignment="TOP_CENTER">
-      <font>
-        <Font name="System Bold" size="16.0" />
-      </font>
-    </Label>
-  </top>
+    </top>
 </BorderPane>
